In blender-internal strange shadow receive from transparency objects i.e. volume and clouds #37976

Closed
opened 2013-12-28 21:41:17 +01:00 by spectre 9009 · 9 comments

System Information
Operating system and graphics card
Operatins system Windows and Linux

Blender Version
Broken: Blender 2.6X

Short description of error
In blender-internal strange shadow receive from transparency objects i.e. volume and clouds as both containing file transparency.png

Exact steps for others to reproduce the error
Render file transparency.blend. Or to new file create object volume or cloud and run render.
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Operating system and graphics card Operatins system Windows and Linux **Blender Version** Broken: Blender 2.6X **Short description of error** In blender-internal strange shadow receive from transparency objects i.e. volume and clouds as both containing file transparency.png **Exact steps for others to reproduce the error** Render file transparency.blend. Or to new file create object volume or cloud and run render. Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @spectre9009

Added subscriber: @spectre9009
Author
[transparency.blend](https://archive.blender.org/developer/F58352/transparency.blend) ![transparency.png](https://archive.blender.org/developer/F58353/transparency.png)

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Brecht Van Lommel was assigned by Sergey Sharybin 2014-01-17 12:43:27 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by blender/blender-addons-contrib@82a7a3d3ed

This issue was referenced by blender/blender-addons-contrib@82a7a3d3ed04b6f93c9e5a32349116122863fec0

This issue was referenced by 82a7a3d3ed

This issue was referenced by 82a7a3d3ed04b6f93c9e5a32349116122863fec0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 82a7a3d3ed.

Closed by commit 82a7a3d3ed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37976
No description provided.