Fix T37976: blender internal transparent shadows from volumes not working correct.